[package]
name = "hevy-mcp-server"
version = "0.1.0"
edition = "2024"
description = "MCP server for Hevy fitness API"
license = "MIT"

[dependencies]
mcp-server = "0.1"
mcp-spec = "0.1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
serde_path_to_error = "0.1"
serde_with = "3"
axum = "0.7"
bytes = "1"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
tower-service = "0.3"
futures-util = "0.3"

[profile.release]
lto = true
codegen-units = 1
strip = true
